<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://s35spchemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".onboarding.OnBoarding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:layout_marginTop="80sp"
        android:textSize="35sp"
        android:textStyle="italic|bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/noto_sans"
        android:gravity="center_horizontal"
        android:text="@string/hint_username"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/noto_sans"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@android:color/white"
        android:textSize="24sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/noto_sans"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@android:color/white"
        android:text="@string/hint_password"
        android:textSize="20sp"
        android:textColorHint="@android:color/white"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@android:color/white"
        android:cursorVisible="true"
        android:fontFamily="@font/noto_sans"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/b_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:text="@string/signin_submit"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:textSize="25sp"
        android:padding="7dp"
        />

    <LinearLayout
        android:id="@+id/layout_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:text="@string/new_user"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:text="@string/click_here"
            android:textSize="20sp"
            android:layout_marginStart="7dp"
            />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        />

</LinearLayout>