<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/signup_submit"
        android:textColor="#fff"
        android:layout_marginTop="40sp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textColor="@android:color/white"
        android:text="@string/hint_company_name"
        android:fontFamily="@font/noto_sans"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:textSize="24sp"
        android:layout_marginRight="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="100dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:gravity="center_horizontal"
        android:textCursorDrawable="@android:color/white"
        />

    <TextView
        android:id="@+id/text_enroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textColor="@android:color/white"
        android:text="@string/hint_username"
        android:fontFamily="@font/noto_sans"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:textSize="24sp"
        android:layout_marginRight="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="100dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:gravity="center_horizontal"
        android:textCursorDrawable="@android:color/white"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/noto_sans"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textColor="@android:color/white"
        android:text="@string/hint_password"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/e_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:layout_marginRight="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="100dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:gravity="center_horizontal"
        android:textCursorDrawable="@android:color/white"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textColor="@android:color/white"
        android:text="@string/hint_mobile_no"
        android:fontFamily="@font/noto_sans"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:textSize="24sp"
        android:inputType="number"
        android:layout_marginRight="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="100dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:gravity="center_horizontal"
        android:textCursorDrawable="@android:color/white"
        />

    <TextView
        android:id="@+id/b_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:text="@string/signup_submit"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:textSize="25sp"
        android:padding="7dp"
        />

    <LinearLayout
        android:id="@+id/rel_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:text="@string/already_registered"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/click_here"
            android:textSize="20sp"
            android:layout_marginStart="7dp"
            />


    </LinearLayout>


    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        />

</LinearLayout>