<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/action_bar"
            layout="@layout/toolbar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textColor="@android:color/white"
            android:text="@string/hint_fullname"
            android:fontFamily="@font/noto_sans"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:textSize="24sp"
            android:layout_marginRight="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:gravity="center_horizontal"
            android:textCursorDrawable="@android:color/white"
            />

        <TextView
            android:id="@+id/text_enroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textColor="@android:color/white"
            android:text="@string/hint_emplyeecode"
            android:fontFamily="@font/noto_sans"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/ecode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:textSize="24sp"
            android:layout_marginRight="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:gravity="center_horizontal"
            android:textCursorDrawable="@android:color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textColor="@android:color/white"
            android:text="@string/hint_password"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/e_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/noto_sans"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textColor="@android:color/white"
            android:text="@string/hint_mobile_no"
            android:fontFamily="@font/noto_sans"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:textSize="24sp"
            android:inputType="number"
            android:maxLength="10"
            android:layout_marginRight="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:gravity="center_horizontal"
            android:textCursorDrawable="@android:color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textColor="@android:color/white"
            android:text="@string/hint_dob"
            android:fontFamily="@font/noto_sans"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            />
        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:textSize="24sp"
            android:inputType="date"
            app:met_mask="####-##-##"
            android:layout_marginRight="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:gravity="center_horizontal"
            android:textCursorDrawable="@android:color/white"
            android:hint="YYYY-MM-DD"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/hint_touch"
            android:fontFamily="@font/noto_sans"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fingerprint_black_24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            />


        <TextView
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
            android:text="@string/button_add"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:textSize="25sp"
            android:padding="7dp"
            />


        <ProgressBar
            android:id="@+id/pBar1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            />


    </LinearLayout>


</ScrollView>